<resources>
    <string name="app_name">interesting</string>
    <string name="button_1">Button 1</string>
    <string name="remove_item">Remove</string>
    <string name="add_item">Add</string>
    <string name="button_2">Button 2</string>
    <string name="exit_item">exit</string>
    <string name="browser_button">打开浏览器</string>
    <string name="button_3">Button 3</string>
    <string name="textView">data from Activity_abc: </string>
    <string name="textView2">data from FirstActivity:</string>
    <string name="button">Send Broadcast</string>
    <string name="Login">Account：</string>
    <string name="account" />
    <string name="password">Password：</string>
    <string name="login">Login</string>
    <string name="force_offline">Send force offline broadcast</string>
    <string name="create_database">创建数据库</string>
    <string name="open_URL">打开网址</string>
    <string name="sendToServel">发送请求</string>
    <string name="dataShow">服务器返回的数据</string>
    <string name="URL">请输入想要访问的网址</string>
    <string name="analysis">解析XML</string>
    <string name="myService">开启我的服务</string>
    <string name="stopService">关闭服务</string>
</resources>
